<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_2">

    <EditText
        android:id="@+id/AddTaskActivityEditTextTaskTitle"
        android:layout_width="358dp"
        android:layout_height="87dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="26dp"
        android:ems="10"
        android:fontFamily="@font/rosario_bold"
        android:hint="Task Title"
        android:inputType="textPersonName"
        android:textColor="#ACECF4"
        android:textColorHighlight="#ACECF4"
        android:textColorHint="#ACECF4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddTaskActivityTextViewAddTaskTitle" />

    <TextView
        android:id="@+id/AddTaskActivityTextViewAddTaskTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:fontFamily="@font/rosario_bold"
        android:text="Add Task "
        android:textAlignment="center"
        android:textColor="#ACECF4"
        android:textColorHighlight="#252222"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06" />

    <EditText
        android:id="@+id/AddTaskActivityEditTextTaskDescription"
        android:layout_width="358dp"
        android:layout_height="87dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="26dp"
        android:ems="10"
        android:fontFamily="@font/rosario_bold"
        android:hint="Task Description"
        android:inputType="textPersonName"
        android:textColor="#ACECF4"
        android:textColorHint="#ACECF4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddTaskActivityEditTextTaskTitle" />

    <Button
        android:id="@+id/AddTaskActivitySubmitTaskButton"
        android:layout_width="129dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="112dp"
        android:backgroundTint="@color/cardview_dark_background"
        android:fontFamily="@font/rosario_bold"
        android:text="Add Task"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddTaskActivitySpinnerState" />

    <TextView
        android:id="@+id/AddTaskActivityTextViewTotalTasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="93dp"
        android:layout_marginBottom="76dp"
        android:text="Total Tasks: 0"
        android:textColor="#ACECF4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddTaskActivitySubmitTaskButton" />

    <TextView
        android:id="@+id/AddTaskActivityTextViewSubmittedMessage"
        android:layout_width="143dp"
        android:layout_height="19dp"
        android:layout_marginStart="134dp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textColor="#ACECF4"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddTaskActivityTextViewAddTaskTitle" />

    <Spinner
        android:id="@+id/AddTaskActivitySpinnerState"
        android:layout_width="212dp"
        android:layout_height="41dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="173dp"
        android:layout_marginBottom="112dp"
        android:animateLayoutChanges="false"
        android:background="@color/material_dynamic_neutral30"
        android:backgroundTintMode="add"
        android:dropDownSelector="@color/material_dynamic_neutral30"
        android:hapticFeedbackEnabled="true"
        android:popupBackground="@color/material_dynamic_neutral30"
        android:spinnerMode="dropdown"
        android:splitMotionEvents="false"
        app:layout_constraintBottom_toTopOf="@+id/AddTaskActivitySubmitTaskButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddTaskActivitySpinnerAddTeam" />

    <Spinner
        android:id="@+id/AddTaskActivitySpinnerAddTeam"
        android:layout_width="360dp"
        android:layout_height="45dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="30dp"
        android:background="@color/material_dynamic_neutral30"
        android:popupBackground="@color/material_dynamic_neutral30"
        app:layout_constraintBottom_toTopOf="@+id/AddTaskActivitySpinnerState"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddTaskActivityEditTextTaskDescription" />

    <ImageView
        android:id="@+id/AddTaskActivityImageViewAddImage"
        android:layout_width="119dp"
        android:layout_height="75dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="265dp"
        android:layout_marginBottom="23dp"
        app:layout_constraintBottom_toTopOf="@+id/AddTaskActivitySubmitTaskButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddTaskActivitySpinnerState"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

</androidx.constraintlayout.widget.ConstraintLayout>