<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ActivitySettingsPageETUsername"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_2">

    <EditText
        android:id="@+id/ActivitySettingsPageEditTextUsername"
        android:layout_width="338dp"
        android:layout_height="67dp"
        android:layout_marginTop="124dp"
        android:ems="10"
        android:hint="Username"
        android:inputType="textPersonName"
        android:textColor="#ACECF4"
        android:textColorHint="#ACECF4"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ActivitySettingsPageButtonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="287dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="36dp"
        android:soundEffectsEnabled="true"
        android:text="Save"
        android:backgroundTint="@color/cardview_dark_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ActivitySettingsPageEditTextUsername" />
</androidx.constraintlayout.widget.ConstraintLayout>